# Manion

./: .env.example  README.md  README_KR.md  USAGE.md  pyproject.toml  requirements.txt  server.py  system_prompt.txt
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat
apps/1ocr/docker/: docker-compose.yml
apps/a_ocr/: __init__.py  setup.py
apps/a_ocr/tools/: picture_ocr_pipeline.py
apps/b_graphsampling/: __init__.py  anchor_ir.py  builder.py  router.py
apps/c_codegen/: __init__.py  cas_system_prompt.txt  codegen.py  system_prompt.txt
apps/c_geo_codegen/: __init__.py  geo_system_prompt.txt  spec_codegen.py
apps/cas/: compute.py
apps/codegen/: codegen.py
apps/d_compute/: __init__.py
apps/d_compute/geo_compute/: __init__.py  angle_rules.py  (+4 more)
apps/d_geo_compute/: __init__.py  angle_rules.py  error_handler.py  error_system_prompt.txt  geom_utils.py  planner.py  scene_runtime.py  solver.py  templates.py
apps/e_cas_codegen/: __init__.py  codegen.py  system_prompt.txt
apps/e_ceo_codegen/: __init__.py  codegen.py  system_prompt.txt
apps/f_cas_compute/: __init__.py  cas.py  cas_core.py  compute.py  error_handler.py  error_system_prompt.txt
apps/f_ceo_compute/: __init__.py  cas.py
apps/g_render/: __init__.py  fill.py
apps/h_postproc/: __init__.py  llm_openai.py  postproc.py  postprocess.py
apps/postproc/: postproc_prompt.md
configs/: openai.toml
libs/: schemas.py
libs/geo/: angle_rules.py
libs/postproc/: llm_openai.py  postproc.py  run_manim.py
pipelines/: __init__.py  cli_e2e.py  cli_stage.py  e2e.py  stages.py  utils.py
