[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "manion"
version = "0.1.0"
description = "Math problem solving pipeline"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["apps*", "libs*", "pipelines*"]
